--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,8 +5,8 @@
 
 /* Example overrides */
 :root {
-  --bg-color: #f5f5f5;
-  --text-color: #222222;
-  --link-color: #0077cc;
+  --bg-color: #f5f5f5 !important;
+  --text-color: #222222 !important;
+  --link-color: #0077cc !important;
 }
 
