--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 
 /* Example overrides */
 :root {
-  --bg-color: #f5f5f5 !important;
+  --bg-color: #ADD8E6 !important;
   --text-color: #222222 !important;
   --link-color: #0077cc !important;
 }
