--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,4 +9,6 @@
   --text-color: #222222 !important;
   --link-color: #0077cc !important;
 }
-
+body {
+  background-color: #ADD8E6 !important;  /* light blue */
+}
