--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,5 +10,6 @@
   --link-color: #0077cc !important;
 }
 body {
-  background-color: #ADD8E6 !important;  /* light blue */
+  background-color: #ADD8E6 !important; /* light blue */
+  color: #333333 !important;
 }
