--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,3 +13,6 @@ body {
   background-color: #ADD8E6 !important; /* light blue */
   color: #333333 !important;
 }
+h1, h2, h3 {
+  color: #222222;
+}
