--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,7 @@
   --link-color: #0077cc !important;
 }
 body {
+  font-family: 'Montserrat', sans-serif !important;
   background-color: #ADD8E6 !important; /* light blue */
   color: #333333 !important;
 }
