--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,7 @@
 <p>
   <a href="mailto:yourname@example.com">yourname@example.com</a>
 </p>
+<p>
+  This website is being built using Jekyll.
+  It is an ongoing project!
+</p>
