--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,6 @@
   <a href="mailto:yourname@example.com">yourname@example.com</a>
 </p>
 <p>
-  This website is being built using Jekyll.
+  This website is being built using Jekyll.<br>
   It is an ongoing project!
 </p>
