--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
+<footer class= "site-footer custom-footer">
 <p>
   <a href="mailto:yourname@example.com">yourname@example.com</a>
 </p>
@@ -5,3 +6,4 @@
   This website is being built using Jekyll.<br>
   It is an ongoing project!
 </p>
+</footer>
